--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.13.5",
     "anchor": "project-serum/anchor",
     "axios": "^1.6.2",
+    "byteify": "^4.1.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
