--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/web3.js": "^1.87.6",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.33.0",
+    "@types/bs58": "^4.0.4",
     "anchor": "project-serum/anchor",
     "axios": "^1.6.2",
     "bs58": "^5.0.0",
