--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_RPC_URL=
+NEXT_PUBLIC_PROPULSION_MINT_ADDRESS=
+NEXT_PUBLIC_LANDING_GEAR_MINT_ADDRESS=
+NEXT_PUBLIC_NAVIGATION_MINT_ADDRESS=
+NEXT_PUBLIC_PRESENTS_BAG_MINT_ADDRESS=
