--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_PROPULSION_MINT_ADDRESS=
 NEXT_PUBLIC_LANDING_GEAR_MINT_ADDRESS=
 NEXT_PUBLIC_NAVIGATION_MINT_ADDRESS=
 NEXT_PUBLIC_PRESENTS_BAG_MINT_ADDRESS=
+NEXT_PUBLIC_GAME_ID=
